# src/module/interview-template/question/question-category/question-category.router.ts
@@ -13,6 +13,9 @@ const {
 } = getQuestionCategoryContext();
 
 questionCategoryRouter.get('/', auth, async (req: Request<{}, QuestionCategory[]>, res, next) => {
+    // #swagger.tags = ['interview-template']
+    // #swagger.summary = 'Get all questionCategories'
+    // #swagger.description = 'Returns questionCategories array'
     await tryExecute(next, async () => {
         const questionCategories = await getAllQuestionCategory.execute();
         res.json(questionCategories);
