# src/module/interview-template/template/interview-template.router.ts
@@ -15,6 +15,27 @@ const {
 } = getInterviewTemplateContext();
 
 interviewTemplateRouter.post('/', auth, async (req: Request<{}, InterviewTemplate, Omit<CreateInterviewTemplate, 'companyId'>>, res, next) => {
+    /*
+    #swagger.tags = ['interview-template']
+    #swagger.summary = 'Create interview-template by companyId'
+    #swagger.description = 'Returns interview-template id and name'
+    #swagger.parameters['x-access-token'] = {
+        in: 'header',
+        required: true,
+        description: 'Add user x-access-token'
+    }
+    #swagger.parameters['body'] = {
+        in: 'body',
+        required: true,
+        description: 'Add InterviewTemplate name',
+        schema: {
+            name: 'Auto QA'
+        }
+     }
+     #swagger.responses[200] = {
+        description: 'InterviewTemplate successfully created.',
+        schema: {id: 'uuid4', name: 'Auto QA'}
+     }*/
     await tryExecute(next, async () => {
         const interviewTemplate = await createInterviewTemplateUseCase.execute({
             name: req.body.name,
@@ -26,25 +47,81 @@ interviewTemplateRouter.post('/', auth, async (req: Request<{}, InterviewTemplat
 });
 
 interviewTemplateRouter.get('/', auth, async (req: Request<{}, InterviewTemplate[]>, res, next) => {
+    /*
+    #swagger.tags = ['interview-template']
+    #swagger.summary = 'Get all interview-templates by companyId'
+    #swagger.description = 'Returns interview-templates array'
+    #swagger.parameters['x-access-token'] = {
+        in: 'header',
+        required: true,
+        description: 'Add user x-access-token'
+    }
+    #swagger.responses[200] = {
+        description: 'InterviewTemplates successfully obtained.',
+        schema: [{id: 'uuid4', name: 'Auto QA'}]
+     }*/
     await tryExecute(next, async () => {
         const companyInterviewTemplates = await getInterviewTemplateByCompanyUseCase.execute(req.user.companyId);
         res.json(companyInterviewTemplates);
     });
 });
 
-interviewTemplateRouter.delete('/:id', auth, async (req, res, next) => {
-    await tryExecute(next, async () => {
-        const interviewTemplate = await deleteInterviewTemplateUseCase.execute(req.params.id);
-        res.json(interviewTemplate);
-    });
-});
-
 interviewTemplateRouter.put('/:id', auth, async (req, res, next) => {
+    /*
+    #swagger.tags = ['interview-template']
+    #swagger.summary = 'Update interview-template by ID'
+    #swagger.description = 'Returns interview-template id and name'
+    #swagger.parameters['id'] = {
+        in: 'path',
+        required: true,
+        description: 'InterviewTemplate ID',
+     }
+    #swagger.parameters['x-access-token'] = {
+        in: 'header',
+        required: true,
+        description: 'Add user x-access-token'
+    }
+    #swagger.parameters['body'] = {
+        in: 'body',
+        required: true,
+        description: 'Add InterviewTemplate name',
+        schema: {
+            name: 'Frontend Developer'
+        }
+    }
+    #swagger.responses[200] = {
+            description: 'InterviewTemplate successfully updated.',
+            schema: [{id: 'uuid4', name: 'Frontend Developer'}]
+    }*/
     await tryExecute(next, async () => {
         const interviewTemplate = await updateInterviewTemplateUseCase.execute({
             id: req.params.id,
             name: req.body.name
         });
+        res.json(interviewTemplate);
+    });
+});
+
+interviewTemplateRouter.delete('/:id', auth, async (req, res, next) => {
+    /*
+    #swagger.tags = ['interview-template']
+    #swagger.summary = 'Delete interview-template by ID'
+    #swagger.description = ''
+    #swagger.parameters['id'] = {
+        in: 'path',
+        required: true,
+        description: 'InterviewTemplate ID',
+     }
+    #swagger.parameters['x-access-token'] = {
+        in: 'header',
+        required: true,
+        description: 'Add user x-access-token'
+    }
+    #swagger.responses[200] = {
+            description: 'InterviewTemplate successfully deleted.'
+    }*/
+    await tryExecute(next, async () => {
+        const interviewTemplate = await deleteInterviewTemplateUseCase.execute(req.params.id);
         res.json(interviewTemplate);
     });
 });
